# adventofcode-2025

./: meson.build
day1/: p1.cpp  p2.cpp
day2/: p1.cpp  p2.cpp
day3/: p1.cpp  p2.cpp
day4/: p1.cpp  p2.cpp
day5/: p1.cpp  p2.cpp
day6/: p1.cpp  p2.cpp
day7/: p1.cpp  p2.cpp
day8/: p1.cpp  p2.cpp
day9/: data.txt  p1.cpp  p2.cpp
