project(
    'adventofcode-2025',
    'cpp',
    default_options : [
        'warning_level=3',
        'werror=true',
    ]
)

executable(
    'day1_p1',
    files('day1/p1.cpp'),
)

executable(
    'day1_p2',
    files('day1/p2.cpp'),
)

executable(
    'day2_p1',
    files('day2/p1.cpp'),
)

executable(
    'day2_p2',
    files('day2/p2.cpp'),
)