project(
    'adventofcode-2025',
    'cpp',
    default_options : [
        'warning_level=3',
        'werror=true',
    ]
)

executable(
    'day1_p1',
    files('day1/p1.cpp'),
)

executable(
    'day1_p2',
    files('day1/p2.cpp'),
)

executable(
    'day2_p1',
    files('day2/p1.cpp'),
)

executable(
    'day2_p2',
    files('day2/p2.cpp'),
)

executable(
    'day3_p1',
    files('day3/p1.cpp'),
)

executable(
    'day3_p2',
    files('day3/p2.cpp'),
)

executable(
    'day4_p1',
    files('day4/p1.cpp'),
)

executable(
    'day4_p2',
    files('day4/p2.cpp'),
)

executable(
    'day5_p1',
    files('day5/p1.cpp'),
)

executable(
    'day5_p2',
    files('day5/p2.cpp'),
)

executable(
    'day6_p1',
    files('day6/p1.cpp'),
)

executable(
    'day6_p2',
    files('day6/p2.cpp'),
)

executable(
    'day7_p1',
    files('day7/p1.cpp'),
)

executable(
    'day7_p2',
    files('day7/p2.cpp'),
)

executable(
    'day8_p1',
    files('day8/p1.cpp'),
)

executable(
    'day8_p2',
    files('day8/p2.cpp'),
)